added links to all pages

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="card__info">
                     <div>
-                        <a href="./" class="card__link">Open App</a>
+                        <a href="https://stopwatch-timer-utility.netlify.app/" class="card__link">Open App</a>
                     </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="card__info">
                     <div>
-                        <a href="./" class="card__link">Open App</a>
+                        <a href="https://dateutilityapp.netlify.app/" class="card__link">Open App</a>
                     </div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="card__info">
                     <div>
-                        <a href="./" class="card__link">Open App</a>
+                        <a href="https://language-translator-webapp.netlify.app/" class="card__link">Open App</a>
                     </div>
                     </div>
                 </div>
