--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         Time Utility Apps
                     </p>
                     <p>
-                        Alias itaque praesentium eum, pariatur consequatur ducimus asperiores accusantium velit minima?
+                        Has time measuring utility apps like Stopwatch and Timer 
                     </p>
                     </div>
                     <div class="card__info">
@@ -90,7 +90,7 @@
                         Date Utility Apps
                     </p>
                     <p>
-                        Alias itaque praesentium eum, pariatur consequatur ducimus asperiores accusantium velit minima?
+                        Has apps which converts date from human readable form to epoch and vice versa.
                     </p>
                     </div>
                     <div class="card__info">
@@ -106,7 +106,7 @@
                         Language Translator
                     </p>
                     <p>
-                        Alias itaque praesentium eum, pariatur consequatur ducimus asperiores accusantium velit minima?
+                        Contains Language Translator app which converts text from english to hindi.
                     </p>
                     </div>
                     <div class="card__info">
